# pypH

./: .buildinfo  .gitignore  README.md  api.html  contributor-guide.html  genindex.html  getting-started.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  release-notes.html  requirements.txt  search.html  searchindex.js  setup.py  user-guide.html
.github/workflows/: docs-deploy.yml  publish-to-pypi.yml  publish-to-testpypi.yml
Guide/: auxiliary.html  plotting.html  theory.html  titration.html
_sources/: api.md  contributor-guide.md  getting-started.md  intro.md  release-notes.md  user-guide.md
_sources/Guide/: auxiliary.md  plotting.md  theory.md  titration.md
docs/: _config.yml  _toc.yml  api.md  getting-started.md  intro.md  release-notes.md  requirements-docs.txt
docs/Guide/: auxiliary.md  plotting.md  theory.md
docs/_static/css/: custom.css
src/pypH/: acid.py  base.py  core.py  species.py  spectator.py  system.py  visualization.py
