[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypH"
version = "0.0.1"
authors = [
  { name="Pierpaolo Pravatto" },
]
description = "A simple python library to plot logarithmic diagrams of acid base systems"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/ppravatto/pypH"
"Bug Tracker" = "https://github.com/ppravatto/pypH/issues"