[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyph-toolkit"
version = "0.0.1"
authors = [
  { name="Pierpaolo Pravatto" },
]
description = "A simple python-based plotter for acid-base logarithmic diagrams visualization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/ppravatto/pypH"
"Bug Tracker" = "https://github.com/ppravatto/pypH/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pypH", "pypH.*"]